<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#262322"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="345dp"
            android:layout_height="57dp"
            android:text="Hello World!"
            android:textColor="#FFF"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintVertical_bias="0.007" android:id="@+id/ValueTxt"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="197dp"
            android:layout_height="367dp"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.919"
            android:layout_marginEnd="8dp" android:id="@+id/constraintLayout">

        <Button
                android:text="@string/button_comma"
                android:layout_width="0dp"
                android:layout_height="0dp" android:id="@+id/button_comma"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintDimensionRatio="1:1"
                style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button0" app:layout_constraintEnd_toStartOf="@+id/button_comma"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_comma" style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button10"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button10" app:layout_constraintEnd_toStartOf="@+id/button0"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toTopOf="@+id/button0"
                style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button3"
                app:layout_constraintBottom_toTopOf="@+id/button_comma" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintDimensionRatio="1:1"
                style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button2"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintBottom_toTopOf="@+id/button0"
                app:layout_constraintTop_toTopOf="@+id/button3" app:layout_constraintVertical_bias="1.0"
                style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button1" app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintTop_toTopOf="@+id/button2"
                app:layout_constraintBottom_toTopOf="@+id/button10" app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"
                style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintDimensionRatio="1:1" style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button5"
                android:layout_width="0dp"
                android:id="@+id/button5" app:layout_constraintEnd_toStartOf="@+id/button6"
                app:layout_constraintTop_toTopOf="@+id/button6"
                app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintVertical_bias="1.0" android:layout_height="0dp"
                style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button4" app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintBottom_toTopOf="@+id/button1" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintTop_toTopOf="@+id/button5" style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button9"
                app:layout_constraintBottom_toTopOf="@+id/button6" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintDimensionRatio="1:1"
                style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button8"
                app:layout_constraintBottom_toTopOf="@+id/button5" app:layout_constraintEnd_toStartOf="@+id/button9"
                app:layout_constraintTop_toTopOf="@+id/button9" app:layout_constraintDimensionRatio="1:1"
                style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button7"
                app:layout_constraintBottom_toTopOf="@+id/button4" app:layout_constraintEnd_toStartOf="@+id/button8"
                app:layout_constraintTop_toTopOf="@+id/button8" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                tools:ignore="OnClick" style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button_reset"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_reset" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button9"
                app:layout_constraintStart_toEndOf="@+id/button7"
                app:layout_constraintDimensionRatio="2:1" style="@android:style/Widget.Button.Small"/>
        <Button
                android:text="@string/button_equals"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_equals" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_reset"
                app:layout_constraintBottom_toTopOf="@+id/button7"
                app:layout_constraintTop_toTopOf="@+id/button_reset" app:layout_constraintDimensionRatio="1:1"
                style="@android:style/Widget.Button.Small"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <Button
                android:text="@string/btn_subs"
                android:layout_width="wrap_content"
                android:layout_height="61dp" android:id="@+id/button_substract"
                app:layout_constraintEnd_toStartOf="@+id/button_add"
                style="@android:style/Widget.Button.Small"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="@+id/button_add"/>
        <Button
                android:text="@string/btn_add"
                android:layout_width="63dp"
                android:layout_height="62dp"
                android:id="@+id/button_add"
                style="@android:style/Widget.Button.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>